--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "sprite",
   "private": "true",
+  "dependencies": {
+    "hyperapp": "^2.0.8"
+  },
   "devDependencies": {
-    "autoprefixer": "^10.1.0",
     "chokidar-cli": "^2.1.0",
     "clean-css-cli": "^4.3.0",
-    "esbuild": "^0.8.29",
+    "esbuild": "^0.8.33",
     "html-minifier": "^4.0.0",
-    "postcss": "^8.2.2",
-    "postcss-cli": "^8.3.1"
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
+    "typescript": "^4.1.3",
+    "uglify-js": "^3.12.5"
+  },
+  "optionalDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "stylelint": "^13.9.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0"
   }
 }
