--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "clean-css-cli": "^4.3.0",
     "esbuild": "^0.8.33",
     "html-minifier": "^4.0.0",
-    "postcss": "^8.2.4",
-    "postcss-cli": "^8.3.1",
+    "sass": "^1.32.5",
     "typescript": "^4.1.3",
     "uglify-js": "^3.12.5"
   },
