--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "img-extract": "^1.0.0",
     "img-load": "^2.0.0",
-    "mithril": "^2.0.4"
+    "mithril": "^2.0.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "chokidar-cli": "^2.1.0",
