--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "img-extract": "^1.0.0",
     "img-load": "^2.0.0",
+    "lodash.clonedeep": "^4.5.0",
     "mithril": "^2.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
