--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean-css-cli": "^4.3.0",
     "esbuild": "^0.8.33",
     "html-minifier": "^4.0.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.32.5",
     "typescript": "^4.1.3",
     "uglify-js": "^3.12.5"
